# binary-recon

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/: elf_parser.h  entropy.h  format_detect.h  hashes.h  pe_parser.h
core/src/: elf_parser.cpp  format_detect.cpp  hashes.cpp  main.cpp  pe_parser.cpp
docs/: architecture.md
python/: pyproject.toml
python/recon/: __init__.py  __main__.py  analyzer.py
python/recon/core/: __init__.py  core_wrapper.py  risk.py
python/recon/detectors/: __init__.py  anti_debug.py  base_detector.py  crypto.py  injection.py  network.py  packer.py  persistence.py  signatures.py
python/recon/tui/: app.py
tests/python/: conftest.py  test_smoke.py
