[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-recon"
version = "0.1.0"
description = "Static analysis tool for ELF and PE executables"
readme = "../README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ilya Klimov", email = "ilyaklim2101@icloud.com"}
]
keywords = ["binary-analysis", "elf", "pe", "reverse-engineering", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "textual>=0.50",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "textual-dev>=1.0",
]

[project.scripts]
recon = "recon.__main__:main"
recon-tui = "recon.tui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
python_files = ["test_*.py"]
